...
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pWy-ms-gOl" userLabel="Container">
                    <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B2y-VG-v1T">
                            <rect key="frame" x="361" y="8" width="41" height="33"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <state key="normal" title="Done"/>
                            <connections>
                                <action selector="done" destination="mpb-t3-Kh2" eventType="touchUpInside" id="Zdh-Fn-Mdb"/>
                            </connections>
                        </button>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vjq-cH-I3O" customClass="RoundedRectangleView" customModule="DuckDuckGo" customModuleProvider="target">
                            <rect key="frame" x="80" y="6.5" width="269" height="36"/>
...
