...
                                        <rect key="frame" x="20" y="55.333332061767578" width="374" height="44.333332061767578"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="ULa-28-l3s" id="WB6-p9-ymj">
                                            <rect key="frame" x="0.0" y="0.0" width="374" height="44.333332061767578"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Tab" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="Zpg-h0-rYv">
                                                    <rect key="frame" x="20" y="9.9999999999999982" width="265" height="24.333333333333329"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="AN5-oc-b3c"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <nil key="textColor"/>
...
