# tabs.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site"
- pressKey: Enter
    
- assertVisible: ".*Privacy Test Pages.*"

# Add tab
- assertVisible: Tab Switcher
- tapOn: Tab Switcher
- assertVisible: ".*Privacy Test Pages.*"
- assertVisible: "New Tab"
- tapOn: "New Tab"
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://www.search-company.site"
- pressKey: Enter
- assertVisible: "Search engine"

# Switch Tab
- assertVisible: Tab Switcher
- tapOn: Tab Switcher
- assertVisible: ".*Privacy Test Pages.*"
- assertVisible: ".*Ad Click Flow.*"
- assertVisible: "2 Private Tabs"
- tapOn: "Open \"Privacy Test Pages - Home\" at privacy-test-pages.site"
- assertNotVisible: ".*Ad Click Flow.*"
- assertVisible: ".*Privacy Test Pages.*"
- tapOn: "Refresh Page"

# Suggestions
- assertVisible:
    id: "searchEntry"

- tapOn: 
    id: "searchEntry"
- inputText: "ad click"
- assertVisible: "Switch to Tab.*search-company.site"
- tapOn: "Switch to Tab.*search-company.site"
- assertVisible: ".*Ad Click Flow.*"

- tapOn: 
    id: "searchEntry"
- inputText: "privacy"
- assertVisible: "Switch to Tab.*privacy-test-pages.site"
- tapOn: "Switch to Tab.*privacy-test-pages.site"
- assertVisible: ".*Privacy Test Pages.*"

# Needed or else test can't see the Tab Switcher button for some reason
- tapOn: "Refresh Page"

# Close Tab
- assertVisible: Tab Switcher
- tapOn: Tab Switcher
- assertVisible: ".*Privacy Test Pages.*"
- assertVisible: ".*Ad Click Flow.*"
- assertVisible: "2 Private Tabs"
- assertVisible: "Close \"Ad Click Flow\" at www.search-company.site" 
- tapOn: "Close \"Ad Click Flow\" at www.search-company.site"
- assertNotVisible: ".*Ad Click Flow.*"
- assertVisible: "1 Private Tab"
- tapOn: "Done"

# Switch tabs from new tab
- tapOn: "Refresh Page"
- assertVisible: Tab Switcher
- tapOn: Tab Switcher
- assertVisible: ".*Privacy Test Pages.*"
- assertVisible: "New Tab"
- tapOn: "New Tab"
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "privacy"
- assertVisible: "Switch to Tab.*privacy-test-pages.site"
- tapOn: "Switch to Tab.*privacy-test-pages.site"
- assertVisible: ".*Privacy Test Pages.*"
- tapOn: "Refresh Page"
- assertVisible: Tab Switcher
- tapOn: Tab Switcher
- assertVisible: "1 Private Tab"

